[gd_scene load_steps=8 format=3 uid="uid://bx4yey6h1x6rm"]

[ext_resource type="Script" uid="uid://dfuhfu5hx1sq2" path="res://scripts/level_settings.gd" id="1_daewo"]
[ext_resource type="Texture2D" uid="uid://cj45na5rb1ols" path="res://assets/original/goalAnimationBackground.png" id="1_m8nqt"]
[ext_resource type="AudioStream" uid="uid://13g1x2kqvbqf" path="res://assets/sounds/click interface.mp3" id="2_me11v"]
[ext_resource type="Texture2D" uid="uid://b8o5tfu7tduux" path="res://assets/original/ok.png" id="2_pmasl"]
[ext_resource type="Texture2D" uid="uid://cbwp27y5oelom" path="res://assets/original/rotateLeft.png" id="3_2wkyj"]
[ext_resource type="Texture2D" uid="uid://bw7dr58tgxhal" path="res://assets/original/switch_on.png" id="3_uxrau"]
[ext_resource type="Texture2D" uid="uid://coyv13va1o2rr" path="res://assets/original/bg.png" id="4_5qifx"]

[node name="Level-Settings" type="Node2D"]
script = ExtResource("1_daewo")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_me11v")
bus = &"SFX"

[node name="Timer" type="Timer" parent="AudioStreamPlayer"]
wait_time = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 150)
scale = Vector2(1, 1.1)
texture = ExtResource("1_m8nqt")

[node name="ghost_button" type="TouchScreenButton" parent="."]
position = Vector2(-100, -200)
scale = Vector2(0.612635, 0.579957)
texture_normal = ExtResource("3_uxrau")
texture_pressed = ExtResource("4_5qifx")

[node name="gold_button" type="TouchScreenButton" parent="."]
position = Vector2(-100, 0)
scale = Vector2(0.612635, 0.579957)
texture_normal = ExtResource("3_uxrau")
texture_pressed = ExtResource("4_5qifx")

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = 511.0
offset_right = 618.0
offset_bottom = 1223.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
icon = ExtResource("3_2wkyj")
icon_alignment = 1

[node name="Container" type="VBoxContainer" parent="."]
offset_left = -540.0
offset_top = -407.0
offset_right = 540.0
offset_bottom = 507.0

[node name="Label" type="Label" parent="Container"]
z_index = 4
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Settings"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Container"]
z_index = 4
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Ghost of your best run:"
horizontal_alignment = 1

[node name="spacer2" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="spacer" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="Label5" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Ghost of Gold Medal:"
horizontal_alignment = 1

[node name="spacer3" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="spacer4" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="Label3" type="Label" parent="Container"]
custom_minimum_size = Vector2(800, 131)
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "You can find audio settings in the menu (Settings icon)"
horizontal_alignment = 1
autowrap_mode = 3

[node name="spacer5" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="Button" type="Button" parent="Container"]
z_index = 4
layout_mode = 2
icon = ExtResource("2_pmasl")
flat = true
icon_alignment = 1

[connection signal="timeout" from="AudioStreamPlayer/Timer" to="." method="_on_timer_timeout"]
[connection signal="released" from="ghost_button" to="." method="_on_ghost_button_released"]
[connection signal="released" from="gold_button" to="." method="_on_gold_button_released"]
[connection signal="button_up" from="Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="Container/Button" to="." method="_on_button_button_up"]
